# KitchenGuard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build_all.py  build_app.py  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.opencode/plans/: mobile-app.md
cocinap/: app.py  config.py  engine.py  test_app.py  webui.py
cocinap/alarm/: sound_alarm.py
cocinap/analyzer/: risk_analyzer.py
cocinap/camera/: handler.py
cocinap/detector/: detector.py  runner.py
cocinap/resources/: version.txt
cocinap/utils/: visuals.py
cocinap_mobile/: .gitignore  FIREBASE_SETUP.md  README.md  pubspec.yaml
cocinap_mobile/android/app/: build.gradle.kts
cocinap_mobile/android/app/src/main/: AndroidManifest.xml
cocinap_mobile/android/app/src/main/kotlin/com/example/cocinap_mobile/: MainActivity.kt
cocinap_mobile/lib/: main.dart
cocinap_mobile/lib/pages/: alarms_page.dart  config_page.dart  dashboard_page.dart  discovery_page.dart  settings_page.dart
cocinap_mobile/lib/providers/: alarms_provider.dart  config_provider.dart  server_provider.dart
cocinap_mobile/lib/services/: api_service.dart  background_service.dart  discovery_service.dart  fcm_service.dart  mjpeg_service.dart  settings_service.dart
cocinap_mobile/lib/widgets/: mjpeg_viewer.dart  status_card.dart
cocinap_mobile/test/: widget_test.dart
docs/: API.md  ARCHITECTURE.md  BUILD.md  DEPLOY.md
installer/: CocinaP.iss
scripts/: test_video.py  upload_test.py
